--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^10.0.4",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.5",
@@ -48,7 +49,7 @@
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
-    "tailwindcss": "^3.3.7",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vitest": "^1.0.4"
