--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "daisyui": "^4.7.2",
     "firebase": "^10.8.1",
     "history": "^5.3.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.21.1",
     "react-toastify": "^10.0.4",
     "tailwindcss": "^3.4.1",
